--- a/src/scss/_all.scss
+++ b/src/scss/_all.scss
@@ -40,13 +40,22 @@
     }
     
     header {
+        // display: flex;
+        // flex-direction: column;
+        // position: relative;
+        // height: 70vh;
+        // background-color: transparent;
+        // justify-content: center;
+        // align-items: center;
         display: flex;
         flex-direction: column;
         position: relative;
-        height: 70vh;
+        height: 100vh;
+        width: 100%;
         background-color: transparent;
         justify-content: center;
         align-items: center;
+        margin: 0;
     }
     
     header p {
@@ -244,27 +253,33 @@
     }
     
     .parallax {
-        background-image: url('/assets/images/spacex.jpg');
-        height: 75vh;
-        background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        // background-image: url('/assets/images/spacex.jpg');
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-around;
+        height: 30vh;
+        font-weight: 700;
+        font-size: 55px;
+        flex-wrap: wrap;
+        // background-attachment: fixed;
+        // background-position: center;
+        // background-repeat: no-repeat;
+        // background-size: cover;
         margin: 0;
         padding: 0;
-        border-bottom: 5px solid darkorange;
+        // border-bottom: 5px solid darkorange;
     }
     
     // .text-box {
     //     top: 380px;
     //     color: #FDDC5C;
     // }
-    @media only screen and (max-device-width: 1024px) {
-        .parallax {
-            background-attachment: scroll;
-        }
-    }
-    
+    // @media only screen and (max-device-width: 1024px) {
+    //     .parallax {
+    //         background-attachment: scroll;
+    //     }
+    // }
     .project {
         display: flex;
         flex-direction: column;
@@ -313,7 +328,7 @@
     
     #poza>img {
         border-radius: 50%;
-        margin: 10px;
+        margin: 25px;
     }
     
     .container {
@@ -388,6 +403,22 @@
         font-size: 1.1rem;
         animation-name: rotation;
         animation-duration: 5s;
+    }
+    
+    .abtMe {
+        background-color: rgba(28, 28, 29, 0.3);
+        margin-bottom: 25px;
+        margin-top: 25px;
+        border-radius: 25px;
+        padding: 10px;
+    }
+    
+    .experience {
+        background-color: rgba(28, 28, 29, 0.3);
+        margin-bottom: 25px;
+        margin-top: 25px;
+        border-radius: 25px;
+        padding: 10px;
     }
     
     .container1:hover {
@@ -517,6 +548,23 @@
             padding: 5px;
             text-align: left;
             margin-left: 30px;
+        }
+        .parallax {
+            // background-image: url('/assets/images/spacex.jpg');
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            justify-content: space-around;
+            height: 30vh;
+            font-weight: 700;
+            font-size: 55px;
+            flex-wrap: wrap;
+            // background-attachment: fixed;
+            // background-position: center;
+            // background-repeat: no-repeat;
+            // background-size: cover;
+            margin: 0;
+            padding: 0;
         }
     }
     
